# SDE_quark

./: CMakeLists.txt  COPYING  README  SDE_quark GNU GPL 3.docx  bind_ker.cpp  bind_sde.cpp  bind_sde_ker.cpp  compile_SDE_quark.sh  consts.h  filenames_complex_prop.h  main_complex_prop.cpp  main_sde_iter.cpp  main_sde_pmts_io.cpp  sde_pmts_io.h
python/: cpp_ab.npz  quad_ab.npz  test_sf_compiled.py  tfc.py
source_gker/: g_mt.h
source_sde_quark/: complex_prop.h  natural_cubic_spline.h  quark_prop.h  rvt.h  sde_ker.h  sde_ker_z_itg.h  sde_quark.h  sde_quark_iter.h  sde_quark_ker.h  sde_quark_prop.h  sde_quark_prop_ker_asymp.h  sde_quark_prop_ker_asymp_elem.h  sde_solution.h  sf.h  var_tran_pf_z.h
source_utility/: gc_grid.h  gc_rw.h  gh_rw.h  gk_rw.h  itp_1d.h  quad_gc.h  quad_gch.h  quad_gh.h  quad_gk.h  quad_trapz.h  tol_test.h
